[package]
name = "eeprom_dac_sharing"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
version = "0.1.0"
license = "proprietary"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"

eeprom24x = "0.7"

embassy-rp = { version = "0.1", features = [
    "defmt",
    "time-driver",
    "intrinsics",
    "rom-v2-intrinsics",
    "critical-section-impl",
] }
embassy-futures = { version = "0.1" }
embassy-embedded-hal = { version = "0.1", features = ["defmt"] }
embassy-executor = { version = "0.5", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-sync = { version = "0.5", features = ["defmt"] }

panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1", features = ["critical-section"] }
static_cell = { version = "2", features = ["nightly"] }
critical-section = "1.1.2"
embedded-hal = "1.0.0"
